# nushell

./: Cargo.toml
crates/nu-cli/src/: repl.rs  syntax_highlight.rs
crates/nu-cli/src/completions/: attribute_completions.rs  completer.rs  custom_completions.rs
crates/nu-cli/tests/completions/: mod.rs
crates/nu-cmd-extra/: Cargo.toml
crates/nu-cmd-lang/src/: default_context.rs
crates/nu-color-config/src/: shape_color.rs
crates/nu-command/: Cargo.toml
crates/nu-command/src/filesystem/: watch.rs
crates/nu-command/src/filters/: window.rs
crates/nu-command/src/random/: uuid.rs
crates/nu-command/src/system/: nu_check.rs
crates/nu-command/tests/commands/: watch.rs
crates/nu-engine/src/: documentation.rs  scope.rs
crates/nu-engine/src/compile/: expression.rs  keyword.rs
crates/nu-heavy-utils/: Cargo.toml
crates/nu-heavy-utils/src/: lib.rs
crates/nu-heavy-utils/tests/: main.rs
crates/nu-lsp/src/: ast.rs  signature.rs
crates/nu-parser/src/: flatten.rs  known_external.rs  lex.rs  lite_parser.rs  parse_keywords.rs  parse_patterns.rs  parser.rs  type_check.rs
crates/nu-parser/tests/: test_parser.rs
crates/nu-protocol/: Cargo.toml
crates/nu-protocol/src/: eval_const.rs  signature.rs
crates/nu-protocol/src/ast/: attribute.rs  call.rs  mod.rs  pipeline.rs  traverse.rs
crates/nu-protocol/src/engine/: engine_state.rs  state_working_set.rs
crates/nu-protocol/src/value/: macros.rs  mod.rs  record.rs
crates/nu-std/src/: lib.rs
crates/nu-std/std-rfc/conversions/: mod.nu
crates/nu-std/std/assert/: mod.nu
crates/nu-test/: Cargo.toml
crates/nu-test/src/: lib.rs  test.rs
src/: ide.rs  main.rs
tests/repl/: test_spread.rs  test_type_check.rs
(+17 files in other folders)
