[package]
authors.workspace = true
description = "Nushell test runner"
edition.workspace = true
license.workspace = true
name = "nu-test"
repository = "https://github.com/nushell/nushell/tree/main/crates/nu-test"
rust-version.workspace = true
version.workspace = true
publish = false                                                            # not done yet

[dependencies]
nu-cli.workspace = true
nu-cmd-extra.workspace = true
nu-cmd-lang.workspace = true
nu-command.workspace = true
nu-engine.workspace = true
nu-experimental.workspace = true
nu-glob.workspace = true
nu-parser.workspace = true
nu-path.workspace = true
nu-protocol.workspace = true
nu-std.workspace = true
nu-utils.workspace = true
nu-heavy-utils.workspace = true

derive_more = { workspace = true, features = ["display"]}
itertools = { workspace = true }
kitest = { workspace = true }
miette = { workspace = true }
pathdiff = { workspace = true }
thiserror = { workspace = true }
walkdir = { workspace = true }

[lints]
## still prototyping
# workspace = true

[lints.clippy]
result_large_err = "allow"
